# kkelo

./: README.md  pyproject.toml
kkelo/: __init__.py  com.py  elo.py  util.py
tests/: test.py  test_speed_trueskill.py
