[project]
name = "kkelo"
version = "1.0.2"
requires-python = ">= 3.12"
description = "Team-based Elo rating"
dependencies = [
    'numpy>=2.2',
    'pandas>=2.2',
    'scipy>=1.14',
    'matplotlib>=3.9.2',
]

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["kkelo"]
